fixed bugs to make sure Devise is working properly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
     <%= csrf_meta_tags %>
   </head>
 
+  <header>
+
+      <%= render 'layouts/navbar' %>
+
+  </header>
+
   <body>
 
     <%= yield %>
