made css changes to Devise views

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,13 @@
 <% provide(:title, 'About') %>
-<h2>A Ruby on Rails App with User Authentication</h2>
-<h4>Technologies include:</h4>
-<ul>
-  <li><a href="https://www.ruby-lang.org/">Ruby 2.3</a></li>
-  <li><a href="http://rubyonrails.org/">Rails 5.0</a></li>
-  <li><a href="http://www.postgresql.org/">PostgreSQL 9.5</a></li>
-  <li><a href="#">Foundation 6</a></li>
-</ul>
+<div id="gh-static-wrapper" style="background-image: url(<%= asset_path 'lawn_mower.jpeg' %>)">
+  <div id="marquee">
+    <h2 class="static-text">A Ruby on Rails App</h2>
+    <h4 class="static-text">Technologies include:</h4>
+    <ul>
+      <li><a href="https://www.ruby-lang.org/">Ruby 2.3</a></li>
+      <li><a href="http://rubyonrails.org/">Rails 5.0</a></li>
+      <li><a href="http://www.postgresql.org/">PostgreSQL 9.5</a></li>
+      <li><a href="#">Foundation 6</a></li>
+    </ul>
+  </div>
+</div>
