--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,7 +53,7 @@ NAVBAR
 STATIC PAGES
 ************************************ */
 
-#gh-home-wrapper {
+#gh-static-wrapper {
   height: 100vh;
   background: no-repeat center center fixed;
   background-size: cover;
@@ -75,14 +75,31 @@ STATIC PAGES
   font-size: 2.5em;
 }
 
-.home-text {
+#marquee > h2 {
+  font-size: 4em;
+}
+
+#marquee > h4 {
+  font-size: 2.5em;
+}
+
+.static-text {
   color: rgb(255,222,0);
   font-weight: 450;
+}
+
+#marquee > ul > li > a {
+  color: rgb(255,222,0);
+  font-size: 1.8em;
 }
 
 /* ************************************
 VIEWS BODY
 ************************************ */
+
+.gh-devise-page-title {
+  font-size: 4em;
+}
 
 /* ************************************
 FOOTER
