--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
             <li><%= link_to 'Sign out', destroy_gardener_session_path, method: 'delete' %></li>
           <% else %>
             <li><%= link_to 'Sign up', new_gardener_registration_path %></li>
-            <li><%= link_to 'Sign in', new_gardener_session_path %></li>
+            <li><%= link_to 'Log in', new_gardener_session_path %></li>
           <% end %>
           <li><%= link_to 'About', '/about' %></li>
         </ul>
