--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,17 @@
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<div class="row">
+  <div class="medium-6 medium-offset-2 large-6 large-offset-2 columns">
 
-  <div class="row">
-    <div class="medium-6 columns">
-      <h2 class="gh-devise-page-title">Sign up</h2>
-    </div>
-  </div>
+    <h2 class="gh-devise-page-title">Sign Up</h2>
 
-  <div class="row">
-    <div class="medium-6 columns">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+
       <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true %>
       </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="medium-6 columns">
       <div class="field">
         <%= f.label :password %>
         <% if @minimum_password_length %>
@@ -26,30 +19,18 @@
         <% end %><br />
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="medium-6 columns">
       <div class="field">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="medium-6 columns">
       <div class="actions">
         <%= f.submit "Sign up", class: "success button" %>
       </div>
-    </div>
-  </div>
-
-<% end %>
-
-<div class="row">
-  <div class="medium-6 columns">
-    <%= render "devise/shared/links" %>
+    <% end %>
   </div>
 </div>
+
+
+    <%= render "devise/shared/links" %>
