index view is now a global list of all tools, but only the tool owner can update or detroy his/her tools

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,6 @@
     <h3 class="static-text">This is your neighborhood toolshed</h3>
     <br/>
     <%= link_to "Sign up", new_gardener_registration_path, class: "success button" %>
-    <%= link_to "Sign in", new_gardener_session_path, class: "success button"%>
+    <%= link_to "Log in", new_gardener_session_path, class: "success button"%>
   </div>
 </div>
