--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -20,8 +20,10 @@
         <td><%= tool.available %></td>
         <td><%= tool.requested %></td>
         <td><%= link_to 'Show', tool %></td>
-        <td><%= link_to 'Edit', edit_tool_path(tool) %></td>
-        <td><%= link_to 'Destroy', tool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%- if tool.gardener == current_gardener %>
+          <td><%= link_to 'Edit', edit_tool_path(tool) %></td>
+          <td><%= link_to 'Destroy', tool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end -%>
       </tr>
     <% end %>
   </tbody>
