--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar nav-desktop" id="gh-nav">
   <div class="wrapper">
     <div class="top-bar-left">
-        <h3 class="site-logo">GARDENHOOD</h3>
+        <%= link_to 'GARDENHOOD', home_path, id: "site-logo" %>
     </div>
 
     <div class="top-bar-right">
