--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
     <h1 class="static-text">Gardenhood</h1>
     <h3 class="static-text">This is your neighborhood toolshed</h3>
     <br/>
-    <%= link_to "Sign up", new_gardener_registration_path, class: "success button" %>
-    <%= link_to "Log in", new_gardener_session_path, class: "success button"%>
+    <%= link_to "Sign up", new_gardener_registration_path, class: "success button", id: "gh-success" %>
+    <%= link_to "Log in", new_gardener_session_path, class: "success button", id: "gh-success"%>
   </div>
 </div>
