--- a/app/assets/stylesheets/_static.scss
+++ b/app/assets/stylesheets/_static.scss
@@ -2,6 +2,9 @@
 STATIC PAGES
 ************************************ */
 
+$gh-yellow: #ffde00;
+$gh-green: #367c2b;
+
 #gh-static-wrapper {
   height: 100vh;
   background: no-repeat center center fixed;
