--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -2,6 +2,9 @@
 DEVISE STYLES
 ************************************ */
 
+$gh-yellow: #ffde00;
+$gh-green: #367c2b;
+
 .gh-devise-page-title {
   font-size: 4em;
   color: $gh-yellow;
