--- a/app/assets/stylesheets/tools.scss
+++ b/app/assets/stylesheets/tools.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Tools controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$gh-yellow: #ffde00;
+$gh-green: #367c2b;
