--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -1,2 +1,34 @@
 $gh-yellow: #ffde00;
 $gh-green: #367c2b;
+
+#cards {
+
+  .card {
+    border: 2px solid black;
+    border-radius: 10px;
+    background: lightgray;
+    @media (min-width: 640px) {
+      width: 45%;
+      margin: 2.5%;
+    }
+
+    img {
+      height: 150px;
+      border-radius: 10px;
+    }
+
+    .details {
+      display: inline-block;
+      vertical-align: top;
+      h4 {
+        display: inline-block;
+        padding-right: 5px;
+      }
+    }
+
+  }
+
+
+
+
+}
