Created grid layout for tool cards and media queries adjusting image size.

--- a/app/views/static_pages/cards.html.erb
+++ b/app/views/static_pages/cards.html.erb
@@ -10,30 +10,35 @@
       <h4>Mower</h4>
       <button>Edit</button>
       <p><span class='emph'>Owner:</span> Justin</p>
-
     </div>
   </div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Details</th>
-        <th>Requested</th>
-      </tr>
-    </thead>
+  <div class='card'>
+    <img src="assets/mower.jpeg" alt="">
+    <div class='details'>
+      <h4>Mower</h4>
+      <button>Edit</button>
+      <p><span class='emph'>Owner:</span> Justin</p>
+    </div>
+  </div>
 
-    <tbody>
-        <tr>
-          <td>Mower</td>
-          <td>This is a mower</td>
-          <td>True</td>
-          <td><a href="">Show</a></td>
-          <td><a href="">Edit</a></td>
-          <td><a href="">Destroy</a></td>
-        </tr>
-    </tbody>
-  </table>
+  <div class='card'>
+    <img src="assets/mower.jpeg" alt="">
+    <div class='details'>
+      <h4>Mower</h4>
+      <button>Edit</button>
+      <p><span class='emph'>Owner:</span> Justin</p>
+    </div>
+  </div>
+
+  <div class='card'>
+    <img src="assets/mower.jpeg" alt="">
+    <div class='details'>
+      <h4>Mower</h4>
+      <button>Edit</button>
+      <p><span class='emph'>Owner:</span> Justin</p>
+    </div>
+  </div>
 
   <br>
 
