--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -7,19 +7,28 @@ $gh-green: #367c2b;
     border: 2px solid black;
     border-radius: 10px;
     background: lightgray;
-    @media (min-width: 640px) {
-      width: 45%;
-      margin: 2.5%;
-    }
+    width: 48%;
+    margin: 5px 1%;
+    float: left;
 
     img {
-      height: 150px;
+      height: 100px;
       border-radius: 10px;
+      vertical-align: middle;
+      float: left;
+      @media (max-width: 430px) {
+        height: 50px;
+      }
+      @media (min-width: 640px) {
+        height: 150px;
+      }
     }
 
     .details {
       display: inline-block;
       vertical-align: top;
+      float: left;
+      padding: 0 2px;
       h4 {
         display: inline-block;
         padding-right: 5px;
@@ -27,8 +36,4 @@ $gh-green: #367c2b;
     }
 
   }
-
-
-
-
 }
