Rewrote tool card grid layout with flexbox.

--- a/app/views/static_pages/cards.html.erb
+++ b/app/views/static_pages/cards.html.erb
@@ -1,42 +1,43 @@
-<div id="cards">
+<div id="cards-page">
   <p id="notice"><%= notice %></p>
 
   <h1>Your Toolshed - Cards Test</h1>
 
-
-  <div class='card'>
-    <img src="assets/mower.jpeg" alt="">
-    <div class='details'>
-      <h4>Mower</h4>
-      <button>Edit</button>
-      <p><span class='emph'>Owner:</span> Justin</p>
+  <div id=cards>
+    <div class='card'>
+      <img src="assets/mower.jpeg" alt="">
+      <div class='details'>
+        <h4>Mower</h4>
+        <button>Edit</button>
+        <p><span class='emph'>Owner:</span> Justin</p>
+      </div>
     </div>
-  </div>
 
-  <div class='card'>
-    <img src="assets/mower.jpeg" alt="">
-    <div class='details'>
-      <h4>Mower</h4>
-      <button>Edit</button>
-      <p><span class='emph'>Owner:</span> Justin</p>
+    <div class='card'>
+      <img src="assets/mower.jpeg" alt="">
+      <div class='details'>
+        <h4>Mower</h4>
+        <button>Edit</button>
+        <p><span class='emph'>Owner:</span> Justin</p>
+      </div>
     </div>
-  </div>
 
-  <div class='card'>
-    <img src="assets/mower.jpeg" alt="">
-    <div class='details'>
-      <h4>Mower</h4>
-      <button>Edit</button>
-      <p><span class='emph'>Owner:</span> Justin</p>
+    <div class='card'>
+      <img src="assets/mower.jpeg" alt="">
+      <div class='details'>
+        <h4>Mower</h4>
+        <button>Edit</button>
+        <p><span class='emph'>Owner:</span> Justin</p>
+      </div>
     </div>
-  </div>
 
-  <div class='card'>
-    <img src="assets/mower.jpeg" alt="">
-    <div class='details'>
-      <h4>Mower</h4>
-      <button>Edit</button>
-      <p><span class='emph'>Owner:</span> Justin</p>
+    <div class='card'>
+      <img src="assets/mower.jpeg" alt="">
+      <div class='details'>
+        <h4>Mower</h4>
+        <button>Edit</button>
+        <p><span class='emph'>Owner:</span> Justin</p>
+      </div>
     </div>
   </div>
 
