--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -1,39 +1,47 @@
 $gh-yellow: #ffde00;
 $gh-green: #367c2b;
 
-#cards {
 
-  .card {
-    border: 2px solid black;
-    border-radius: 10px;
-    background: lightgray;
-    width: 48%;
-    margin: 5px 1%;
-    float: left;
+#cards-page {
 
-    img {
-      height: 100px;
+  #cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    .card {
+      border: 2px solid black;
       border-radius: 10px;
-      vertical-align: middle;
-      float: left;
-      @media (max-width: 430px) {
-        height: 50px;
-      }
-      @media (min-width: 640px) {
-        height: 150px;
-      }
-    }
+      background: lightgray;
+      width: 48%;
+      margin: 4px 0;
 
-    .details {
-      display: inline-block;
-      vertical-align: top;
-      float: left;
-      padding: 0 2px;
-      h4 {
-        display: inline-block;
-        padding-right: 5px;
+      img {
+        height: 100px;
+        border-radius: 10px;
+        vertical-align: middle;
+        float: left;
+        @media (max-width: 430px) {
+          height: 50px;
+        }
+        @media (min-width: 640px) {
+          height: 150px;
+        }
       }
+
+      .details {
+        display: inline-block;
+        vertical-align: top;
+        float: left;
+        padding: 0 2px;
+        h4 {
+          display: inline-block;
+          padding-right: 5px;
+        }
+      }
+
     }
 
   }
 }
+
