--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -15,12 +15,17 @@ $gh-green: #367c2b;
       background: lightgray;
       width: 48%;
       margin: 4px 0;
+      display: flex;
+      align-items: center;
+
+      .details {
+        height: 100%;
+      }
 
       img {
         height: 100px;
         border-radius: 10px;
         vertical-align: middle;
-        float: left;
         @media (max-width: 430px) {
           height: 50px;
         }
@@ -31,12 +36,17 @@ $gh-green: #367c2b;
 
       .details {
         display: inline-block;
-        vertical-align: top;
-        float: left;
         padding: 0 2px;
         h4 {
           display: inline-block;
           padding-right: 5px;
+        }
+      }
+
+      @media (max-width: 350px) {
+        width: 100%;
+        .details {
+          padding-left: 10px;
         }
       }
 
