Got rid of 'edit' in tool card. Will move to details in accordion.

--- a/app/views/static_pages/cards.html.erb
+++ b/app/views/static_pages/cards.html.erb
@@ -7,8 +7,7 @@
     <div class='card'>
       <img src="assets/mower.jpeg" alt="">
       <div class='details'>
-        <h4>Mower</h4>
-        <button>Edit</button>
+        <h4>John Deere Mega Mower Killer Destroyer</h4>
         <p><span class='emph'>Owner:</span> Justin</p>
       </div>
     </div>
@@ -17,7 +16,6 @@
       <img src="assets/mower.jpeg" alt="">
       <div class='details'>
         <h4>Mower</h4>
-        <button>Edit</button>
         <p><span class='emph'>Owner:</span> Justin</p>
       </div>
     </div>
@@ -26,7 +24,6 @@
       <img src="assets/mower.jpeg" alt="">
       <div class='details'>
         <h4>Mower</h4>
-        <button>Edit</button>
         <p><span class='emph'>Owner:</span> Justin</p>
       </div>
     </div>
@@ -35,7 +32,6 @@
       <img src="assets/mower.jpeg" alt="">
       <div class='details'>
         <h4>Mower</h4>
-        <button>Edit</button>
         <p><span class='emph'>Owner:</span> Justin</p>
       </div>
     </div>
