--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -10,6 +10,7 @@
       <th>Notes</th>
       <th>Status</th>
       <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
@@ -17,10 +18,11 @@
     <% @requests.each do |request| %>
       <tr>
         <td><%= request.tool_id %></td>
-        <td><%= request.start_date  %></td>
+        <td><%= request.start_date.to_s + ' until ' + request.end_date.to_s  %></td>
         <td><%= request.notes %></td>
         <td><%= request.status %></td>
         <td><%= link_to 'Edit', edit_request_path(request) %></td>
+        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
