--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,8 @@
     <div class="top-bar-right">
         <ul class="menu menu-desktop">
           <% if signed_in? %>
-            <li><%= link_to 'Your Tools', tools_path %></li>
+            <li><%= link_to 'The Toolshed', tools_path %></li>
+            <li><%= link_to 'Your Requests', requests_path %></li>
             <li><%= link_to current_gardener.email, edit_gardener_registration_path %></li>
             <li><%= link_to 'Sign out', destroy_gardener_session_path, method: 'delete' %></li>
           <% else %>
