Added 'jquery-turbolinks' gem to enable Foundation JS functionality.

--- a/app/views/static_pages/cards.html.erb
+++ b/app/views/static_pages/cards.html.erb
@@ -3,7 +3,7 @@
 
   <h1>Your Toolshed - Cards Test</h1>
 
-  <div id=cards>
+  <div id="cards">
 
     <div class="accordion card" data-accordion data-allow-all-closed="true">
 
