--- a/app/views/static_pages/cards.html.erb
+++ b/app/views/static_pages/cards.html.erb
@@ -3,13 +3,15 @@
 
   <h1>Your Toolshed - Cards Test</h1>
 
+
+
+
   <div id="cards">
 
+
     <div class="accordion card" data-accordion data-allow-all-closed="true">
-
       <div class="accordion-item" data-accordion-item>
-
-        <a href="#" class="accordion-title">
+        <a href="" class="accordion-title">
           <div>
             <img src="assets/mower.jpeg" alt="">
             <div class='details'>
@@ -18,17 +20,12 @@
             </div>
           </div>
         </a>
-
-        <div class='accordion-content details'>
+        <div class="accordion-content" data-tab-content>
           <h6>Details:</h6>
           <p>This is a killer mower!</p>
         </div>
-
       </div>
-
     </div>
-
-
 
     <div class='card'>
       <img src="assets/mower.jpeg" alt="">
@@ -67,17 +64,11 @@
 
   <%= link_to 'New Tool', new_tool_path %>
 
-    <ul class="accordion" data-accordion>
-      <li class="accordion-item is-active" data-accordion-item>
+    <ul class="accordion" data-accordion data-allow-all-closed="true">
+      <li class="accordion-item" data-accordion-item>
         <a href="" class="accordion-title">Accordion 1</a>
         <div class="accordion-content" data-tab-content>
           I would start in the open state, due to using the `is-active` state class.
-        </div>
-      </li>
-      <li class="accordion-item" data-accordion-item>
-        <a href="" class="accordion-title">Accordion 2</a>
-        <div class="accordion-content" data-tab-content>
-          NUMBER TWO
         </div>
       </li>
     </ul>
