--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -24,6 +24,15 @@ $gh-green: #367c2b;
       flex-direction: column;
       align-items: center;
 
+      .accordion-title {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+      }
+      .accordion-content {
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
+
       .details {
         height: 100%;
       }
