--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -25,12 +25,18 @@ $gh-green: #367c2b;
       align-items: center;
 
       .accordion-title {
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
+        border-radius: 8px;
+        border: none;
+        // border-top-left-radius: 10px;
+        // border-top-right-radius: 10px;
       }
       .accordion-content {
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        // border-radius: 10px;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+        background: lightgray;
+        border: none;
+        border-top: 1px solid black;
       }
 
       .details {
