--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -52,20 +52,24 @@
     <% @tools.each do |tool| %>
       <% @requests.each do |request| %>
         <% if tool.id == request.tool_id %>
-          <%- if request.gardener != current_gardener %>
+          <% if request.gardener != current_gardener %>
             <% @gardeners.each do |gardener| %>
               <% if request.gardener_id == gardener.id %>
                 <tr>
                   <td><%= tool.name %></td>
                   <td><%= request.start_date.to_s + ' until ' + request.end_date.to_s  %></td>
                   <td><%= request.notes %></td>
-                  <td><%= request.status %></td>
+
+                  <td><%= link_to 'Approve', "/requests/#{request.id}/toggle_status", data: {new_status: "approved"} %>
+                  <%= link_to 'Deny', "/requests/#{request.id}/toggle_status", data: {new_status: "denied"} %></td>
+
+
                   <td><%= gardener.email %></td>
                 </tr>
               <% end %>
-            <% end -%>
+            <% end %>
           <% end %>
-        <% end -%>
+        <% end %>
       <% end %>
     <% end %>
   </tbody>
