--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -24,10 +24,6 @@ $gh-green: #367c2b;
       flex-direction: column;
       align-items: center;
 
-      .details {
-        height: 100%;
-      }
-
       img {
         height: 100px;
         border-radius: 10px;
@@ -40,9 +36,10 @@ $gh-green: #367c2b;
         }
       }
 
-      .details {
+      .item-heading {
         display: inline-block;
         padding: 0 2px;
+        height: 100%;
         h4 {
           display: inline-block;
           padding-bottom: 5px;
@@ -83,9 +80,26 @@ $gh-green: #367c2b;
     border: none;
     border-top: 1px solid black;
 
-    p {
-      margin: 0;
+    // display: flex;
+
+    .item-details {
+      width: 80%;
+      p {
+        margin: 0;
+      }
     }
+
+    .item-links {
+      width: 20%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-end;
+      a {
+        font-size: 12px;
+      }
+    }
+
   }
 
 }
