--- a/app/views/static_pages/cards.html.erb
+++ b/app/views/static_pages/cards.html.erb
@@ -14,15 +14,22 @@
         <a href="" class="accordion-title">
           <div>
             <img src="assets/mower.jpeg" alt="">
-            <div class='details'>
+            <div class='item-heading'>
               <h4>John Deere Mega Mower Killer Destroyer</h4>
               <p><span class='emph'>Owner:</span> Justin</p>
             </div>
           </div>
         </a>
         <div class="accordion-content" data-tab-content>
-          <h6>Details:</h6>
-          <p>This is a killer mower!</p>
+          <div class="item-details">
+            <h6>Details:</h6>
+            <p>This is a killer mower!</p>
+          </div>
+          <div class="item-links">
+            <a href="">Request</a>
+            <a href="">Edit</a>
+            <a href="">Delete</a>
+          </div>
         </div>
       </div>
     </div>
@@ -32,15 +39,22 @@
         <a href="" class="accordion-title">
           <div>
             <img src="assets/mower.jpeg" alt="">
-            <div class='details'>
+            <div class='item-heading'>
               <h4>John Deere Mega Mower Killer Destroyer</h4>
               <p><span class='emph'>Owner:</span> Justin</p>
             </div>
           </div>
         </a>
         <div class="accordion-content" data-tab-content>
-          <h6>Details:</h6>
-          <p>This is a killer mower!</p>
+          <div class="item-details">
+            <h6>Details:</h6>
+            <p>This is a killer mower!</p>
+          </div>
+          <div class="item-links">
+            <a href="">Request</a>
+            <a href="">Edit</a>
+            <a href="">Delete</a>
+          </div>
         </div>
       </div>
     </div>
@@ -50,15 +64,22 @@
         <a href="" class="accordion-title">
           <div>
             <img src="assets/mower.jpeg" alt="">
-            <div class='details'>
+            <div class='item-heading'>
               <h4>John Deere Mega Mower Killer Destroyer</h4>
               <p><span class='emph'>Owner:</span> Justin</p>
             </div>
           </div>
         </a>
         <div class="accordion-content" data-tab-content>
-          <h6>Details:</h6>
-          <p>This is a killer mower!</p>
+          <div class="item-details">
+            <h6>Details:</h6>
+            <p>This is a killer mower!</p>
+          </div>
+          <div class="item-links">
+            <a href="">Request</a>
+            <a href="">Edit</a>
+            <a href="">Delete</a>
+          </div>
         </div>
       </div>
     </div>
@@ -68,15 +89,22 @@
         <a href="" class="accordion-title">
           <div>
             <img src="assets/mower.jpeg" alt="">
-            <div class='details'>
+            <div class='item-heading'>
               <h4>John Deere Mega Mower Killer Destroyer</h4>
               <p><span class='emph'>Owner:</span> Justin</p>
             </div>
           </div>
         </a>
         <div class="accordion-content" data-tab-content>
-          <h6>Details:</h6>
-          <p>This is a killer mower!</p>
+          <div class="item-details">
+            <h6>Details:</h6>
+            <p>This is a killer mower!</p>
+          </div>
+          <div class="item-links">
+            <a href="">Request</a>
+            <a href="">Edit</a>
+            <a href="">Delete</a>
+          </div>
         </div>
       </div>
     </div>
@@ -86,15 +114,22 @@
         <a href="" class="accordion-title">
           <div>
             <img src="assets/mower.jpeg" alt="">
-            <div class='details'>
+            <div class='item-heading'>
               <h4>John Deere Mega Mower Killer Destroyer</h4>
               <p><span class='emph'>Owner:</span> Justin</p>
             </div>
           </div>
         </a>
         <div class="accordion-content" data-tab-content>
-          <h6>Details:</h6>
-          <p>This is a killer mower!</p>
+          <div class="item-details">
+            <h6>Details:</h6>
+            <p>This is a killer mower!</p>
+          </div>
+          <div class="item-links">
+            <a href="">Request</a>
+            <a href="">Edit</a>
+            <a href="">Delete</a>
+          </div>
         </div>
       </div>
     </div>
