Added CSS clearfix to #cards containing div.

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,10 +1,10 @@
-<div id="cards-page"
+<div id="cards-page">
 <p id="notice"><%= notice %></p>
 
 <h1>Your Toolshed</h1>
 
 
-<div id="cards">
+<div id="cards" class='clearfix'>
   <div class='grid-sizer'></div>
 
   <% @tools.each do |tool| %>
