--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,9 @@ GENERAL
 .is-active > .accordion-title::before {
   content: none;
 }
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
