--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -59,11 +59,12 @@
                   <td><%= tool.name %></td>
                   <td><%= request.start_date.to_s + ' until ' + request.end_date.to_s  %></td>
                   <td><%= request.notes %></td>
-
-                  <td><%= link_to 'Approve', "/requests/#{request.id}/toggle_status", data: {new_status: "approved"} %>
-                  <%= link_to 'Deny', "/requests/#{request.id}/toggle_status", data: {new_status: "denied"} %></td>
-
-
+                  <% if request.status == "pending" %>
+                    <td><%= link_to 'Approve', "/requests/#{request.id}/set_approved" %> <span> OR </span>
+                    <%= link_to 'Deny', "/requests/#{request.id}/set_denied" %></td>
+                  <% else %>
+                    <td><%= request.status %></td>
+                  <% end %>
                   <td><%= gardener.email %></td>
                 </tr>
               <% end %>
