--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,4 +49,16 @@ GENERAL
     content: "";
     display: table;
     clear: both;
+}
+
+@media (max-width: 950px){
+  .nav-desktop {
+    display: none;
   }
+}
+
+@media (min-width: 949px) {
+  #gh-title-bar {
+    display: none;
+  }
+}
