Changed automatic styling for Foundation Success buttons. Changed Most header tags to match consistent styling. Updated requests edit routing.

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>YOUR REQUESTS</h1>
+<h1 class="static-text">YOUR REQUESTS</h1>
 
-<h2>Tools You've Requested:</h2>
+<h2 class="static-text">Tools You've Requested:</h2>
 <table>
   <thead>
     <tr>
@@ -35,7 +35,7 @@
   </tbody>
 </table>
 
-<h2>Requests Made for Your Tools:</h2>
+<h2 class="static-text">Requests Made for Your Tools:</h2>
 
 <table>
   <thead>
