added username and address to the gardener model

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -39,6 +39,10 @@ $gh-green: #367c2b;
   background-color: $gh-green;
 }
 
+.gh-username {
+  font-weight: bold;
+}
+
 /* ************************************
 MOBILE-NAV
 ************************************ */
