--- a/app/views/layouts/_mobile-nav.html.erb
+++ b/app/views/layouts/_mobile-nav.html.erb
@@ -3,11 +3,11 @@
   <% if signed_in? %>
     <li><%= link_to 'The Toolshed', tools_path %></li>
     <li><%= link_to 'Your Requests', requests_path %></li>
-    <li><%= link_to current_gardener.email, edit_gardener_registration_path %></li>
+    <li><%= link_to 'About', '/about' %></li>
+    <li><%= link_to current_gardener.username, edit_gardener_registration_path, class: 'gh-username' %></li>
     <li><%= link_to 'Sign out', destroy_gardener_session_path, method: 'delete' %></li>
   <% else %>
-    <li><%= link_to 'Sign up', new_gardener_registration_path %></li>
-    <li><%= link_to 'Log in', new_gardener_session_path %></li>
+    <li><%= link_to 'Get Started', new_gardener_session_path %></li>
+    <li><%= link_to 'About', '/about' %></li>
   <% end %>
-  <li><%= link_to 'About', '/about' %></li>
 </ul>
