--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tools_path, class: "button" %>
+<%= link_to 'Back', tools_path, class: "success button", id: "gh-success"%>
