--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="medium-6 medium-offset-2 large-6 large-offset-2 columns">
-    <%= form_for(@tool) do |f| %>
+    <%= form_for(@tool, html: { class: "directUpload", data: { 'form-data' => (@s3_direct_post.fields), 'url' => @s3_direct_post.url, 'host' => URI.parse(@s3_direct_post.url).host } }) do |f| %>
       <% if @tool.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@tool.errors.count, "error") %> prohibited this tool from being saved:</h2>
@@ -17,6 +17,12 @@
         <%= f.label :name %><br>
         <%= f.text_field :name %>
       </div>
+
+      <div class="field">
+        <%= f.label :image %><br>
+        <%= f.file_field :image %>
+      </div>
+
       <div class="field">
         <%= f.label :details %><br>
         <%= f.text_field :details %>
