--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="medium-6 large-6 columns">
     <%- if controller_name != 'sessions' %>
-      <%= link_to "Log in", new_session_path(resource_name), class: "button" %><br />
+      <%= link_to "Log in", new_session_path(resource_name), class: "success button", id: "gh-success" %><br />
     <% end -%>
   </div>
 </div>
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="medium-6 large-6 columns">
     <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-      <%= link_to "Sign up", new_registration_path(resource_name), class: "button" %><br />
+      <%= link_to "Sign up", new_registration_path(resource_name), class: "success button", id: "gh-success" %><br />
     <% end -%>
   </div>
 </div>
@@ -18,7 +18,7 @@
 <div class="row">
   <div class="medium-6 large-6 columns">
     <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-      <%= link_to "Forgot your password?", new_password_path(resource_name), class: "button" %><br />
+      <%= link_to "Forgot your password?", new_password_path(resource_name), class: "success button", id: "gh-success" %><br />
     <% end -%>
   </div>
 </div>
