--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -25,15 +25,27 @@ $gh-green: #367c2b;
       flex-direction: column;
       align-items: center;
 
-      img {
-        height: 100px;
-        border-radius: 10px;
-        vertical-align: middle;
+
+      .tool-image {
+        width: 100px;
+        img {
+          border-radius: 8px;
+          width: 100px;
+          min-width: 100px;
+        }
         @media (max-width: 430px) {
-          height: 50px;
+          width: 50px;
+          img {
+            width: 50px;;
+            min-width: 50px;;
+          }
         }
         @media (min-width: 640px) {
-          height: 150px;
+          width: 150px;
+          img {
+            width: 150px;;
+            min-width: 150px;;
+          }
         }
       }
 
