--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -28,23 +28,26 @@ $gh-green: #367c2b;
 
       .tool-image {
         width: 100px;
+        max-height: 100px;
         img {
           border-radius: 8px;
-          width: 100px;
-          min-width: 100px;
+          max-width: 100px;
+          max-height: 100px;
         }
         @media (max-width: 430px) {
           width: 50px;
+          max-height: 50px;
           img {
-            width: 50px;;
-            min-width: 50px;;
+            max-width: 50px;
+            max-height: 50px;
           }
         }
         @media (min-width: 640px) {
           width: 150px;
+          max-height: 150px;
           img {
-            width: 150px;;
-            min-width: 150px;;
+            max-width: 150px;
+            max-height: 150px;
           }
         }
       }
