--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Home') %>
-<div id="gh-static-wrapper" style="background-image: url(<%= asset_path 'lawn_mower.jpeg' %>)">
+<div id="gh-static-wrapper">
   <div id="marquee">
     <h1 class="static-text">Gardenhood</h1>
     <h3 class="static-text">This is your neighborhood toolshed</h3>
