--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -2,24 +2,24 @@
 <p id="notice"><%= notice %></p>
 
 
-<div class="row">
-  <div class="medium-6 large-6 columns">
 
-    <h1 class="static-text">The Toolshed</h1>
+<div class="search-wrapper">
 
-    <%= form_tag(tools_path, :method => "get", id: "search-form") do %>
-      <%= text_field_tag :search, params[:search], placeholder: "Search for tools" %>
-      <%= submit_tag "Search" %>
-    <% end %>
+  <h1 class="static-text">The Toolshed</h1>
 
-    <% if @tools.present? %>
-      <%= link_to 'Reset', tools_path, class: "success button", id: "gh-success" %>
-    <% else %>
-      <p>There are no tools containing the term(s) <%= params[:search] %>.</p>
-      <%= link_to 'Reset', tools_path, class: "success button", id: "gh-success" %>
-    <% end %>
-  </div>
+  <%= form_tag(tools_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search for tools" %>
+    <%= button_tag "Search", class: "success button search-button", id: "gh-success" %>
+  <% end %>
+
+  <% if @tools.present? %>
+    <%= link_to 'Reset', tools_path, class: "success button search-button", id: "gh-success" %>
+  <% else %>
+    <p>There are no tools containing the term(s) <%= params[:search] %>.</p>
+    <%= link_to 'Reset', tools_path, class: "success button", id: "gh-success" %>
+  <% end %>
 </div>
+
 
 <div id="cards" class='clearfix'>
   <div class='grid-sizer'></div>
